recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:2: error: value =! is not a member of Int
  while (steps =! 0)
               ^